--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,12 @@ analytics:
  google:
    tracking_id: # Google tracking ID if applicable
 
+youtube:
+  height: 315
+  width: 560
+
 conference:
+  room: Room
   venue: Convention Centre
   location: City, Country
   name: Conference Name
@@ -37,3 +42,14 @@ conference:
     url: "http://jackjones.org"
   - name: Bill Bloggs
     url: "http://billblogs.org"
+
+map:
+  show: False
+  mapbox:
+    latitude: # latitude of map center
+    longitude: # longitude of map center
+    map_id: # mapbox id
+    access_token: # mapbox access token
+    zoom_level: 17
+    width: 100%
+    height: 500px
