--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write a description for your conference or meeting here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/confweb" # the subpath of your site, e.g. /blog/
+baseurl: "/_confweb" # the subpath of your site, e.g. /blog/
 url: "http://opendsi.cc" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  sods
@@ -17,7 +17,7 @@ youtube:
 
 github:
   edit: true
-  repository: confweb
+  repository: _confweb
   
 markdown: kramdown
 
