--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ conference:
   hide_tentative: true
   hosts:
 
-  room: Pam Liversidge Building, PLB-E05
-  venue: The University of Sheffield
-  location: Sheffield, UK
+  room: Virtual
+  venue: 
+  location: 
   name: Gaussian Process Summer School
   year: 2020
   month: September
