--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ conference:
   - 2020-09-17
   organizers:
     - {given: Mauricio, family: Alvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
-    - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Amazon Cambridge}
+    - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Microsoft Research Cambridge}
     - {given: Neil D., family: Lawrence, url: "http://inverseprobability.com", institute: University of Cambridge}
     - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
     - {given: Wil, family: Ward, url: "https://wilocw.github.io/", institute: University of Sheffield}
