--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ previous_meeting:
   url: "http://gpss.cc/past_meetings.html"
 
 map:
-  show: true
+  show: false
   mapbox:
     latitude: 53.385396 # latitude of map center
     longitude: -1.472726 # longitude of map center
