minor changes program

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ conference:
     - {given: Mauricio, family: Alvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
     - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Microsoft Research Cambridge}
     - {given: Neil D., family: Lawrence, url: "http://inverseprobability.com", institute: University of Cambridge}
-    - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
+    - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Nottingham}
     - {given: Wil, family: Ward, url: "https://wilocw.github.io/", institute: University of Sheffield}
     - {given: Michael T., family: Smith, url: "http://www.michaeltsmith.org.uk/", institute: University of Sheffield}
     - {given: Fariba, family: Yousefi, url: "https://www.dcs.shef.ac.uk/cgi-intranet/public/makeperson?F.Yousefi", institute: University of Sheffield}
