--- a/_config.yml
+++ b/_config.yml
@@ -48,13 +48,15 @@ conference:
   - 2020-09-16
   - 2020-09-17
   organizers:
-    - {given: Mauricio, family: Alvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
+    - {given: Mauricio, family: &Aacute;lvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
     - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Microsoft Research Cambridge}
     - {given: Neil D., family: Lawrence, url: "http://inverseprobability.com", institute: University of Cambridge}
     - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Nottingham}
     - {given: Wil, family: Ward, url: "https://wilocw.github.io/", institute: University of Sheffield}
     - {given: Michael T., family: Smith, url: "http://www.michaeltsmith.org.uk/", institute: University of Sheffield}
     - {given: "", family: Sheffield Machine Learning Group, url: "https://www.sheffield.ac.uk/dcs/research/groups/machine-learning"}
+    - {given: "", family: Sheffield Machine Learning Network, url: "https://sheffieldmlnet.github.io/"}
+
 
 previous_meeting:
   name: Past Meetings
