--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ conference:
   - 2020-09-16
   - 2020-09-17
   organizers:
-    - {given: Mauricio, family: &Aacute;lvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
+    - {given: Mauricio, family: Alvarez, url: "https://maalvarezl.github.io/", institute: University of Sheffield}
     - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Microsoft Research Cambridge}
     - {given: Neil D., family: Lawrence, url: "http://inverseprobability.com", institute: University of Cambridge}
     - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Nottingham}
