--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ conference:
 
 previous_meeting:
   name: GPSS 2019
-  url: "http:s//gpss.cc/gpss19"
+  url: "http://gpss.cc/gpss19"
 
 map:
   show: false
